modules/wycs/tests/valid/test_arith_26.wyal
assert:
   forall (int x):
     case:
       x < 0
     case:
       x > 0
     case:
       x == 0
