modules/wycs/tests/invalid/test_015.wyal
assert:
  forall(int x):
    x <= 0 ==> -x > 0

